--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width: 97%; /* Prevents horizontal scrolling */
+  width: 100vw; /* Prevents horizontal scrolling */
   font-family: "Raleway", sans-serif;
   transition: filter 0.2s ease;
   overflow: hidden;
@@ -17,9 +17,8 @@ header {
   display: flex;
   justify-content: space-around;
   background-color: #eee;
-  /* color: #000; */
   align-items: center;
-  width: 97vw;
+  width: 100%;
   height: 90px;
   font-size: 2rem;
   border-bottom: 1px solid #000;
@@ -50,7 +49,7 @@ h1 .arrows {
   cursor: pointer;
   user-select: none;
   transition: transform 0.2s ease;
-  margin-right: 40px;
+  margin-right: 32px;
 }
 
 #dark-mode-icon:hover {
@@ -460,9 +459,11 @@ ul.projects {
 
 .list-range-title {
   text-align: center;
+  font-size: 1.4rem;
+  font-weight: 700;
   border-bottom: 1px solid #777;
   background: lightblue;
-  margin: 10px 0 0 0;
+  margin-top: 10px;
   padding: 20px 0;
 }
 
@@ -571,7 +572,7 @@ ul.projects {
 
 .task-card-wrapper .delete-icon {
   margin-left: 205px !important;
-  margin-top: 223px !important;
+  margin-top: 213px !important;
 }
 
 .delete-icon:hover {
